--- a/sec6/style/style.css
+++ b/sec6/style/style.css
@@ -151,6 +151,12 @@ footer
         width: 100%;
     }
 
+    #mainvisual img {
+        width: 100%;
+        height: 50vh;
+        object-fit: cover;
+    }
+
     .box img {
         width: 100%;
         margin-bottom: 10px;
